feat: Implement hybrid 3D model viewer supporting GLB and Sketchfab with dynamic module loading and UI updates.

--- a/viewer.html
+++ b/viewer.html
@@ -157,6 +157,13 @@
 
             </model-viewer>
 
+            <!-- Sketchfab Iframe (Hidden by default) -->
+            <iframe id="sketchfab-viewer"
+                class="absolute inset-0 w-full h-full z-10 opacity-0 pointer-events-none transition-opacity duration-500"
+                title="Sketchfab Viewer" frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true"
+                webkitallowfullscreen="true">
+            </iframe>
+
             <!-- Loading Overlay -->
             <div id="loader"
                 class="absolute inset-0 flex items-center justify-center bg-black/80 z-10 transition-opacity duration-500">
