--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
                             d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
                     </svg>
                 </div>
-                <h3 class="text-xl font-bold mb-2">V6 Engine</h3>
-                <p class="text-sm text-gray-400">Mechanical engineering deep dive. Explore the pistons and crankshaft.
+                <h3 class="text-xl font-bold mb-2">Jet Engine</h3>
+                <p class="text-sm text-gray-400">Aerospace engineering. Explore turbine mechanics.</p>
                 </p>
             </a>
 
