--- a/viewer.html
+++ b/viewer.html
@@ -106,15 +106,35 @@
 
 <body class="h-screen flex text-sm md:text-base">
 
+    <!-- Mobile Menu Button -->
+    <button id="menu-btn"
+        class="absolute top-4 left-4 z-40 p-2 bg-black/50 backdrop-blur rounded text-white md:hidden hover:bg-brand/20 transition-colors">
+        <svg class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+        </svg>
+    </button>
+
+    <!-- Sidebar Overlay (Mobile) -->
+    <div id="sidebar-overlay"
+        class="fixed inset-0 bg-black/80 z-30 opacity-0 pointer-events-none transition-opacity duration-300 md:hidden">
+    </div>
+
     <!-- Sidebar -->
-    <aside class="w-64 glass-panel z-20 flex flex-col border-r border-white/5 flex-shrink-0 relative">
-        <div class="p-6 border-b border-white/5 flex items-center space-x-3">
+    <aside id="sidebar"
+        class="fixed inset-y-0 left-0 w-64 glass-panel z-40 flex flex-col border-r border-white/5 flex-shrink-0 transform -translate-x-full transition-transform duration-300 md:relative md:translate-x-0">
+        <div class="p-6 border-b border-white/5 flex items-center justify-between">
             <a href="index.html" class="flex items-center space-x-2 group">
                 <div
                     class="w-6 h-6 bg-gradient-to-tr from-brand to-brand-accent rounded transform group-hover:rotate-180 transition-transform duration-500">
                 </div>
                 <span class="font-bold tracking-wide group-hover:text-brand transition-colors">3D HUB</span>
             </a>
+            <!-- Close Button (Mobile) -->
+            <button id="close-sidebar" class="md:hidden text-gray-400 hover:text-white">
+                <svg class="w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+                </svg>
+            </button>
         </div>
 
         <div class="px-6 py-4">
