--- a/viewer.html
+++ b/viewer.html
@@ -162,11 +162,22 @@
         <!-- 3D Stage -->
         <div class="flex-1 relative">
             <model-viewer id="viewer" src="" camera-controls auto-rotate shadow-intensity="1" exposure="0.8"
-                environment-image="neutral" alt="A 3D model" animation-name="Run" autoplay>
+                environment-image="neutral" ar ar-modes="webxr scene-viewer quick-look" ar-scale="auto"
+                animation-name="Run" autoplay>
 
                 <div slot="progress-bar" class="absolute top-0 left-0 w-full h-1 bg-white/10">
                     <div class="h-full bg-brand w-0 transition-all duration-300 logic-bar"></div>
                 </div>
+
+                <!-- Custom AR Button (Only shows for GLB models that support AR) -->
+                <button slot="ar-button"
+                    class="absolute top-4 right-4 bg-brand text-black font-bold px-4 py-2 rounded-full flex items-center shadow-lg hover:scale-105 transition-transform z-20">
+                    <svg class="w-5 h-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M3 21v-4m0 0V5a2 2 0 012-2h6.5l1 1H21l-3 6 3 6h-8.5l-1-1H5a2 2 0 00-2 2zm9-13.5V9" />
+                    </svg>
+                    View in AR
+                </button>
 
                 <!-- Custom Hotspot Example -->
                 <button slot="hotspot-main"
@@ -180,8 +191,9 @@
             <!-- Sketchfab Iframe (Hidden by default) -->
             <iframe id="sketchfab-viewer"
                 class="absolute inset-0 w-full h-full z-10 opacity-0 pointer-events-none transition-opacity duration-500"
-                title="Sketchfab Viewer" frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true"
-                webkitallowfullscreen="true">
+                title="Sketchfab Viewer" frameborder="0"
+                allow="autoplay; fullscreen; vr; xr-spatial-tracking; gyroscope; accelerometer; magnetometer; execution-while-out-of-viewport"
+                mozallowfullscreen="true" webkitallowfullscreen="true">
             </iframe>
 
             <!-- Loading Overlay -->
