--- a/viewer.html
+++ b/viewer.html
@@ -169,15 +169,7 @@
                     <div class="h-full bg-brand w-0 transition-all duration-300 logic-bar"></div>
                 </div>
 
-                <!-- Custom AR Button (Only shows for GLB models that support AR) -->
-                <button slot="ar-button"
-                    class="absolute top-4 right-4 bg-brand text-black font-bold px-4 py-2 rounded-full flex items-center shadow-lg hover:scale-105 transition-transform z-20">
-                    <svg class="w-5 h-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M3 21v-4m0 0V5a2 2 0 012-2h6.5l1 1H21l-3 6 3 6h-8.5l-1-1H5a2 2 0 00-2 2zm9-13.5V9" />
-                    </svg>
-                    View in AR
-                </button>
+
 
                 <!-- Custom Hotspot Example -->
                 <button slot="hotspot-main"
@@ -195,6 +187,32 @@
                 allow="autoplay; fullscreen; vr; xr-spatial-tracking; gyroscope; accelerometer; magnetometer; execution-while-out-of-viewport"
                 mozallowfullscreen="true" webkitallowfullscreen="true">
             </iframe>
+
+            <!-- Universal AR Button -->
+            <button id="ar-btn"
+                class="absolute top-4 right-4 bg-brand text-black font-bold px-4 py-2 rounded-full flex items-center shadow-lg hover:scale-105 transition-transform z-20">
+                <svg class="w-5 h-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M3 21v-4m0 0V5a2 2 0 012-2h6.5l1 1H21l-3 6 3 6h-8.5l-1-1H5a2 2 0 00-2 2zm9-13.5V9" />
+                </svg>
+                <span id="ar-btn-text">View in AR</span>
+            </button>
+
+            <!-- About Model Button -->
+            <button id="about-model-btn"
+                class="absolute top-4 right-44 bg-white/10 backdrop-blur-md text-white border border-white/20 font-bold px-4 py-2 rounded-full flex items-center shadow-lg hover:bg-white/20 transition-all z-20">
+                <svg class="w-5 h-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+                </svg>
+                <span>About Model</span>
+            </button>
+
+            <!-- AR Help Toast -->
+            <div id="ar-toast"
+                class="absolute top-16 right-4 bg-black/80 backdrop-blur border border-brand/50 text-white text-xs p-3 rounded-lg shadow-xl max-w-[200px] opacity-0 pointer-events-none transition-opacity duration-300 z-30">
+                <p>For Sketchfab models, tap the <strong>cube icon</strong> in the bottom right of the viewer.</p>
+            </div>
 
             <!-- Loading Overlay -->
             <div id="loader"
