--- a/viewer.html
+++ b/viewer.html
@@ -220,9 +220,46 @@
             </button>
 
             <!-- AR Help Toast -->
-            <div id="ar-toast"
-                class="absolute top-16 right-4 bg-black/80 backdrop-blur border border-brand/50 text-white text-xs p-3 rounded-lg shadow-xl max-w-[200px] opacity-0 pointer-events-none transition-opacity duration-300 z-30">
-                <p>For Sketchfab models, tap the <strong>cube icon</strong> in the bottom right of the viewer.</p>
+            <div id="ar-toast" class="hidden"></div> <!-- Deprecated, replaced by Guide -->
+
+            <!-- AR Guide Overlay -->
+            <div id="ar-guide"
+                class="fixed inset-0 z-50 bg-black/80 backdrop-blur-sm flex flex-col items-center justify-center opacity-0 pointer-events-none transition-opacity duration-300">
+                <div class="text-center p-8 max-w-md">
+                    <div
+                        class="w-16 h-16 bg-brand rounded-full flex items-center justify-center mx-auto mb-6 shadow-[0_0_30px_rgba(0,240,255,0.4)] animate-bounce">
+                        <svg class="w-8 h-8 text-black" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M19 14l-7 7m0 0l-7-7m7 7V3" />
+                        </svg>
+                    </div>
+                    <h2 class="text-2xl font-bold text-white mb-2">Launch Augmented Reality</h2>
+                    <p class="text-gray-300 mb-8">Tap the <strong class="text-brand">Cube Icon</strong> in the viewer
+                        toolbar below to open this model in your room.</p>
+                    <button id="close-ar-guide"
+                        class="px-6 py-2 bg-white/10 hover:bg-white/20 border border-white/20 rounded-full text-white transition-colors">
+                        Got it
+                    </button>
+
+                    <!-- Pointing Curve -->
+                    <div class="absolute bottom-20 right-20 hidden md:block opacity-50">
+                        <svg width="100" height="100" viewBox="0 0 100 100" fill="none"
+                            class="text-brand transform rotate-12">
+                            <path d="M10 10 Q 50 10 90 90" stroke="currentColor" stroke-width="2"
+                                stroke-dasharray="8 4" />
+                            <path d="M90 90 L 70 80 M 90 90 L 80 70" stroke="currentColor" stroke-width="2" />
+                        </svg>
+                    </div>
+                </div>
+
+                <!-- Mobile specific animated pointer at bottom right -->
+                <div class="absolute bottom-12 right-4 md:hidden animate-bounce">
+                    <svg class="w-12 h-12 text-brand drop-shadow-[0_0_10px_rgba(0,240,255,0.8)]" fill="none"
+                        viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="3"
+                            d="M19 14l-7 7m0 0l-7-7m7 7V3" />
+                    </svg>
+                </div>
             </div>
 
             <!-- Loading Overlay -->
