--- a/index.html
+++ b/index.html
@@ -234,6 +234,37 @@
             </a>
 
         </div>
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mt-8">
+
+            <a href="viewer.html" onclick="localStorage.setItem('startTopic', 'anatomy_complete')"
+                class="glass-card p-8 rounded-2xl group cursor-pointer block opacity-0 animate-[fadeInUp_0.8s_ease-out_1.0s_forwards]">
+                <div
+                    class="h-40 bg-gradient-to-br from-gray-800 to-gray-900 rounded-xl mb-6 flex items-center justify-center border border-white/5 group-hover:border-blue-500/30 transition-colors">
+                    <svg class="w-16 h-16 text-gray-600 group-hover:text-blue-400 transition-colors" fill="none"
+                        viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"
+                            d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
+                    </svg>
+                </div>
+                <h3 class="text-xl font-bold mb-2">Complete Human Anatomy</h3>
+                <p class="text-sm text-gray-400">Detailed exploration of the entire human body structure.</p>
+            </a>
+
+            <a href="viewer.html" onclick="localStorage.setItem('startTopic', 'local_ar')"
+                class="glass-card p-8 rounded-2xl group cursor-pointer block opacity-0 animate-[fadeInUp_0.8s_ease-out_1.1s_forwards]">
+                <div
+                    class="h-40 bg-gradient-to-br from-gray-800 to-gray-900 rounded-xl mb-6 flex items-center justify-center border border-white/5 group-hover:border-green-500/30 transition-colors">
+                    <svg class="w-16 h-16 text-gray-600 group-hover:text-green-400 transition-colors" fill="none"
+                        viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"
+                            d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-8l-4-4m0 0L8 8m4-4v12" />
+                    </svg>
+                </div>
+                <h3 class="text-xl font-bold mb-2">Local AR Viewer</h3>
+                <p class="text-sm text-gray-400">Upload your own .glb files to view in AR.</p>
+            </a>
+
+        </div>
     </main>
 
     <footer class="border-t border-white/5 py-8 text-center text-gray-500 text-sm">
