--- a/viewer.html
+++ b/viewer.html
@@ -132,6 +132,9 @@
         class="fixed inset-0 bg-black/80 z-30 opacity-0 pointer-events-none transition-opacity duration-300 md:hidden">
     </div>
 
+    <!-- Hidden File Input for Local AR -->
+    <input type="file" id="file-input" accept=".glb,.gltf" class="hidden">
+
     <!-- Sidebar -->
     <aside id="sidebar"
         class="fixed inset-y-0 left-0 w-64 glass-panel z-40 flex flex-col border-r border-white/5 flex-shrink-0 transform -translate-x-full transition-transform duration-300 md:relative md:translate-x-0">
