--- a/index.html
+++ b/index.html
@@ -264,6 +264,20 @@
                 <p class="text-sm text-gray-400">Upload your own .glb files to view in AR.</p>
             </a>
 
+            <a href="viewer.html" onclick="localStorage.setItem('startTopic', 'skull_explode')"
+                class="glass-card p-8 rounded-2xl group cursor-pointer block opacity-0 animate-[fadeInUp_0.8s_ease-out_1.2s_forwards]">
+                <div
+                    class="h-40 bg-gradient-to-br from-gray-800 to-gray-900 rounded-xl mb-6 flex items-center justify-center border border-white/5 group-hover:border-red-500/30 transition-colors">
+                    <svg class="w-16 h-16 text-gray-600 group-hover:text-red-400 transition-colors" fill="none"
+                        viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"
+                            d="M9.75 17L9 20l-1 1h8l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
+                    </svg>
+                </div>
+                <h3 class="text-xl font-bold mb-2">Exploding Skull</h3>
+                <p class="text-sm text-gray-400">Interactive view of cranial bone structure.</p>
+            </a>
+
         </div>
     </main>
 
