--- a/index.html
+++ b/index.html
@@ -191,14 +191,10 @@
             <a href="viewer.html" onclick="localStorage.setItem('startTopic', 'engine')"
                 class="glass-card p-8 rounded-2xl group cursor-pointer block opacity-0 animate-[fadeInUp_0.8s_ease-out_0.7s_forwards]">
                 <div
-                    class="h-40 bg-gradient-to-br from-gray-800 to-gray-900 rounded-xl mb-6 flex items-center justify-center border border-white/5 group-hover:border-brand/30 transition-colors">
-                    <svg class="w-16 h-16 text-gray-600 group-hover:text-brand transition-colors" fill="none"
-                        viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"
-                            d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z" />
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"
-                            d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
-                    </svg>
+                    class="h-48 bg-gray-900 rounded-xl mb-6 overflow-hidden border border-white/5 group-hover:border-brand/30 transition-all relative">
+                    <img src="assets/images/jet_engine.png" alt="Jet Engine"
+                        class="w-full h-full object-cover opacity-80 group-hover:opacity-100 group-hover:scale-110 transition-all duration-700">
+                    <div class="absolute inset-0 bg-gradient-to-t from-black/80 to-transparent"></div>
                 </div>
                 <h3 class="text-xl font-bold mb-2">Jet Engine</h3>
                 <p class="text-sm text-gray-400">Aerospace engineering. Explore turbine mechanics.</p>
@@ -208,12 +204,10 @@
             <a href="viewer.html" onclick="localStorage.setItem('startTopic', 'heart')"
                 class="glass-card p-8 rounded-2xl group cursor-pointer block opacity-0 animate-[fadeInUp_0.8s_ease-out_0.8s_forwards]">
                 <div
-                    class="h-40 bg-gradient-to-br from-gray-800 to-gray-900 rounded-xl mb-6 flex items-center justify-center border border-white/5 group-hover:border-red-500/30 transition-colors">
-                    <svg class="w-16 h-16 text-gray-600 group-hover:text-red-500 transition-colors" fill="none"
-                        viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"
-                            d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" />
-                    </svg>
+                    class="h-48 bg-gray-900 rounded-xl mb-6 overflow-hidden border border-white/5 group-hover:border-red-500/30 transition-all relative">
+                    <img src="assets/images/human_heart.png" alt="Human Anatomy"
+                        class="w-full h-full object-cover opacity-80 group-hover:opacity-100 group-hover:scale-110 transition-all duration-700">
+                    <div class="absolute inset-0 bg-gradient-to-t from-black/80 to-transparent"></div>
                 </div>
                 <h3 class="text-xl font-bold mb-2">Human Anatomy</h3>
                 <p class="text-sm text-gray-400">Interactive biological systems. Understand the cardiovascular flow.</p>
@@ -222,29 +216,25 @@
             <a href="viewer.html" onclick="localStorage.setItem('startTopic', 'dna')"
                 class="glass-card p-8 rounded-2xl group cursor-pointer block opacity-0 animate-[fadeInUp_0.8s_ease-out_0.9s_forwards]">
                 <div
-                    class="h-40 bg-gradient-to-br from-gray-800 to-gray-900 rounded-xl mb-6 flex items-center justify-center border border-white/5 group-hover:border-purple-500/30 transition-colors">
-                    <svg class="w-16 h-16 text-gray-600 group-hover:text-purple-500 transition-colors" fill="none"
-                        viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"
-                            d="M19.428 15.428a2 2 0 00-1.022-.547l-2.384-.477a6 6 0 00-3.86.517l-.318.158a6 6 0 01-3.86.517L6.05 15.21a2 2 0 00-1.806.547M8 4h8l-1 1v5.172a2 2 0 00.586 1.414l5 5c1.26 1.26.367 3.414-1.415 3.414H4.828c-1.782 0-2.674-2.154-1.414-3.414l5-5A2 2 0 009 10.172V5L8 4z" />
-                    </svg>
+                    class="h-48 bg-gray-900 rounded-xl mb-6 overflow-hidden border border-white/5 group-hover:border-purple-500/30 transition-all relative">
+                    <img src="assets/images/dna_helix.png" alt="DNA Helix"
+                        class="w-full h-full object-cover opacity-80 group-hover:opacity-100 group-hover:scale-110 transition-all duration-700">
+                    <div class="absolute inset-0 bg-gradient-to-t from-black/80 to-transparent"></div>
                 </div>
                 <h3 class="text-xl font-bold mb-2">DNA Double Helix</h3>
                 <p class="text-sm text-gray-400">Genetics. The building blocks of life.</p>
             </a>
 
         </div>
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mt-8">
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-8 mt-8">
 
             <a href="viewer.html" onclick="localStorage.setItem('startTopic', 'anatomy_complete')"
                 class="glass-card p-8 rounded-2xl group cursor-pointer block opacity-0 animate-[fadeInUp_0.8s_ease-out_1.0s_forwards]">
                 <div
-                    class="h-40 bg-gradient-to-br from-gray-800 to-gray-900 rounded-xl mb-6 flex items-center justify-center border border-white/5 group-hover:border-blue-500/30 transition-colors">
-                    <svg class="w-16 h-16 text-gray-600 group-hover:text-blue-400 transition-colors" fill="none"
-                        viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"
-                            d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
-                    </svg>
+                    class="h-48 bg-gray-900 rounded-xl mb-6 overflow-hidden border border-white/5 group-hover:border-blue-500/30 transition-all relative">
+                    <img src="assets/images/complete_anatomy.png" alt="Complete Anatomy"
+                        class="w-full h-full object-cover opacity-80 group-hover:opacity-100 group-hover:scale-110 transition-all duration-700">
+                    <div class="absolute inset-0 bg-gradient-to-t from-black/80 to-transparent"></div>
                 </div>
                 <h3 class="text-xl font-bold mb-2">Complete Human Anatomy</h3>
                 <p class="text-sm text-gray-400">Detailed exploration of the entire human body structure.</p>
@@ -253,12 +243,10 @@
             <a href="viewer.html" onclick="localStorage.setItem('startTopic', 'local_ar')"
                 class="glass-card p-8 rounded-2xl group cursor-pointer block opacity-0 animate-[fadeInUp_0.8s_ease-out_1.1s_forwards]">
                 <div
-                    class="h-40 bg-gradient-to-br from-gray-800 to-gray-900 rounded-xl mb-6 flex items-center justify-center border border-white/5 group-hover:border-green-500/30 transition-colors">
-                    <svg class="w-16 h-16 text-gray-600 group-hover:text-green-400 transition-colors" fill="none"
-                        viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"
-                            d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-8l-4-4m0 0L8 8m4-4v12" />
-                    </svg>
+                    class="h-48 bg-gray-900 rounded-xl mb-6 overflow-hidden border border-white/5 group-hover:border-green-500/30 transition-all relative">
+                    <img src="assets/images/ar_viewer.png" alt="AR Viewer"
+                        class="w-full h-full object-cover opacity-80 group-hover:opacity-100 group-hover:scale-110 transition-all duration-700">
+                    <div class="absolute inset-0 bg-gradient-to-t from-black/80 to-transparent"></div>
                 </div>
                 <h3 class="text-xl font-bold mb-2">Local AR Viewer</h3>
                 <p class="text-sm text-gray-400">Upload your own .glb files to view in AR.</p>
@@ -267,12 +255,10 @@
             <a href="viewer.html" onclick="localStorage.setItem('startTopic', 'skull_explode')"
                 class="glass-card p-8 rounded-2xl group cursor-pointer block opacity-0 animate-[fadeInUp_0.8s_ease-out_1.2s_forwards]">
                 <div
-                    class="h-40 bg-gradient-to-br from-gray-800 to-gray-900 rounded-xl mb-6 flex items-center justify-center border border-white/5 group-hover:border-red-500/30 transition-colors">
-                    <svg class="w-16 h-16 text-gray-600 group-hover:text-red-400 transition-colors" fill="none"
-                        viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"
-                            d="M9.75 17L9 20l-1 1h8l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
-                    </svg>
+                    class="h-48 bg-gray-900 rounded-xl mb-6 overflow-hidden border border-white/5 group-hover:border-red-500/30 transition-all relative">
+                    <img src="assets/images/exploding_skull.png" alt="Exploding Skull"
+                        class="w-full h-full object-cover opacity-80 group-hover:opacity-100 group-hover:scale-110 transition-all duration-700">
+                    <div class="absolute inset-0 bg-gradient-to-t from-black/80 to-transparent"></div>
                 </div>
                 <h3 class="text-xl font-bold mb-2">Exploding Skull</h3>
                 <p class="text-sm text-gray-400">Interactive view of cranial bone structure.</p>
