style: Refined hero section text appearance by updating 'Learn in' color and paragraph shade.

--- a/index.html
+++ b/index.html
@@ -148,14 +148,14 @@
                 Next Gen Education
             </div>
             <h1 class="text-7xl md:text-8xl font-bold mb-8 leading-tight tracking-tight animate-float">
-                <span class="bg-clip-text text-transparent bg-gradient-to-b from-white via-white to-gray-500">Learn
+                <span class="text-white drop-shadow-lg">Learn
                     in</span>
                 <br />
                 <span
                     class="bg-clip-text text-transparent bg-gradient-to-r from-brand via-cyan-400 to-brand-accent drop-shadow-[0_0_30px_rgba(0,240,255,0.2)]">Dimension.</span>
             </h1>
             <p
-                class="text-xl md:text-2xl text-gray-400 max-w-2xl mx-auto mb-12 opacity-0 animate-[fadeInUp_1s_ease-out_0.3s_forwards] leading-relaxed">
+                class="text-xl md:text-2xl text-gray-300 max-w-2xl mx-auto mb-12 opacity-0 animate-[fadeInUp_1s_ease-out_0.3s_forwards] leading-relaxed">
                 Step inside the machinery. Interactive 3D models that transform abstract concepts into tangible
                 experiences.
             </p>
