--- a/about.html
+++ b/about.html
@@ -7,6 +7,8 @@
     <title>About | 3D Learning Hub</title>
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <!-- Google Generative AI SDK -->
+    <script src="https://cdn.jsdelivr.net/npm/@google/generative-ai"></script>
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -73,6 +75,57 @@
             </p>
         </div>
     </main>
+
+    <!-- Chatbot Widget -->
+    <div id="chatbot-widget" class="fixed bottom-4 right-4 sm:bottom-6 sm:right-6 z-50">
+        <!-- Chat Button -->
+        <button id="chat-toggle" 
+            class="w-14 h-14 sm:w-16 sm:h-16 rounded-full bg-gradient-to-br from-brand to-brand-accent text-white shadow-lg hover:shadow-2xl transform hover:scale-110 transition-all duration-300 flex items-center justify-center">
+            <svg class="w-6 h-6 sm:w-7 sm:h-7" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z"></path>
+            </svg>
+        </button>
+
+        <!-- Chat Window -->
+        <div id="chat-window" class="hidden absolute bottom-20 right-0 w-80 sm:w-96 bg-gray-900 border border-brand/30 rounded-2xl shadow-2xl flex flex-col max-h-96 sm:max-h-[500px]">
+            <!-- Header -->
+            <div class="bg-gradient-to-r from-brand/20 to-brand-accent/20 p-4 rounded-t-2xl border-b border-brand/20">
+                <h3 class="text-lg font-bold text-white">3D Model Assistant</h3>
+                <p class="text-xs text-gray-400">Ask about our 3D models</p>
+            </div>
+
+            <!-- Messages Container -->
+            <div id="chat-messages" class="flex-1 overflow-y-auto p-4 space-y-4">
+                <div class="flex gap-3">
+                    <div class="w-8 h-8 rounded-full bg-brand/20 flex items-center justify-center flex-shrink-0">
+                        <span class="text-brand text-sm">🤖</span>
+                    </div>
+                    <div class="bg-gray-800 rounded-lg p-3 max-w-xs">
+                        <p class="text-sm text-gray-300">Hi! I'm your 3D Learning Hub assistant. Ask me anything about our models, like "Tell me about the Jet Engine" or "What is DNA?"</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Input Area -->
+            <div class="border-t border-brand/20 p-4 space-y-2">
+                <div class="flex gap-2">
+                    <input id="chat-input" type="text" placeholder="Ask about 3D models..."
+                        class="flex-1 bg-gray-800 border border-gray-700 rounded-lg px-3 py-2 text-sm text-white placeholder-gray-500 focus:outline-none focus:border-brand/50 transition-colors">
+                    <button id="chat-send" class="bg-brand text-black rounded-lg px-4 py-2 font-semibold hover:bg-brand/90 transition-colors">
+                        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 19l9 2-9-18-9 18 9-2zm0 0v-8"></path>
+                        </svg>
+                    </button>
+                </div>
+                <div id="chat-loading" class="hidden flex items-center gap-2 text-xs text-gray-400">
+                    <span class="inline-block w-2 h-2 bg-brand rounded-full animate-bounce"></span>
+                    <span>Thinking...</span>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="js/chatbot.js"></script>
 </body>
 
 </html>
