feat: Update chatbot.js to handle empty responses and improve error messaging; modify about.html and viewer.html to load chatbot.js as a module

--- a/viewer.html
+++ b/viewer.html
@@ -397,7 +397,7 @@
     </main>
 
     <script src="js/main.js"></script>
-    <script src="js/chatbot.js"></script>
+    <script type="module" src="js/chatbot.js"></script>
 </body>
 
 </html>
