--- a/about.html
+++ b/about.html
@@ -125,7 +125,7 @@
         </div>
     </div>
 
-    <script src="js/chatbot.js"></script>
+    <script type="module" src="js/chatbot.js"></script>
 </body>
 
 </html>
